--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-eslint": "9.0.0",
+    "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.5",
     "eslint": "5.12.0",
     "eslint-loader": "^2.1.2",
